tests/machine/x/c/cross_join_filter.error
line: 0
error: output mismatch
-- got --
--- Even pairs ---
2 -1554345980
2 -1554345978
-- want --
--- Even pairs ---
2 A
2 B
   1: #include <stdio.h>
